edit moreAboutMe page animation. Now use heart instead of smile face. working on Mac only cause 'heart' is a mac chractor not a css3 shape Edit intro page color and words on shelter. Need to fix z-index problen in safari and transform problem in firefox

--- a/Portfolio/static/css1/sass/animation.scss
+++ b/Portfolio/static/css1/sass/animation.scss
@@ -110,13 +110,13 @@
 /******************************* Define in-rotating animation for projects **************************/
 // animations for mouse enter --projects page
 @include keyframes(pro_in_top){
-	0%   { @include transform(rotateX(0deg));  }
+	0%   { @include transform(rotateX(0deg));}
 	40%  { opacity:1;}
 	100% { @include transform(rotateX(-90deg));
 		   opacity:0;}
 }
 @include keyframes(pro_in_bottom){
-	0%   { @include transform(rotateX(0deg));  }
+	0%   { @include transform(rotateX(0deg));}
 	40%  { opacity:1;}
 	100% { @include transform(rotateX(90deg));
 		   opacity:0;}
@@ -125,21 +125,21 @@
 @include keyframes(rotate_in_bottom){
 	0%   { @include transform(rotateX(-90deg)); opacity:0;}
 	//25%   { @include transform(rotateX(-90deg)); }
-	100% { @include transform(rotateX(0deg));  opacity: 0.8; }
+	100% { @include transform(rotateX(0deg));  opacity: 0.8;}
 }
 @include keyframes(rotate_in_top){
 	0%   { @include transform(rotateX(90deg)); opacity:0;}
-	100% { @include transform(rotateX(0deg));  opacity: 0.8; }
+	100% { @include transform(rotateX(0deg));  opacity: 0.8;}
 }
 // animation for mouse leave --projects page
 @include keyframes(rotate_out_bottom){
-	0%   { @include transform(rotateX(0deg));  }
+	0%   { @include transform(rotateX(0deg));}
 	40%  { opacity:1;}
 	100% { @include transform(rotateX(-90deg)); 
 		   opacity:0;}
 }
 @include keyframes(rotate_out_top){
-		0%   { @include transform(rotateX(0deg)); }
+		0%   { @include transform(rotateX(0deg));}
 	40%  { opacity:1;}
 	100% { @include transform(rotateX(90deg)); 
 		   opacity:0;}
@@ -168,13 +168,13 @@
 }
 @include keyframes(spin){
 	0   { @include transform(rotateY(0deg)); }
-	23% { @include transform(rotateY(0deg)); }
+	24% { @include transform(rotateY(0deg)); }
 	25% { @include transform(rotateY(90deg)); }
-	48% { @include transform(rotateY(90deg)); }
+	49% { @include transform(rotateY(90deg)); }
 	50% { @include transform(rotateY(180deg)); }
-	73% { @include transform(rotateY(180deg)); }
+	74% { @include transform(rotateY(180deg)); }
 	75% { @include transform(rotateY(270deg)); }
-	98% { @include transform(rotateY(270deg)); }
+	99% { @include transform(rotateY(270deg)); }
 	100%{ @include transform(rotateY(360deg)); }
 }
 //**************** More About Me Animation *******************/
@@ -182,39 +182,39 @@ $startFont:1.1em;
 $endFont:1.1em;
 @include keyframes(tada){
 	/* This is the "jump" effect for like/agree */
-	28% {@include transform(translateY(-10px)); font-size:$startFont;}
-	36% {@include transform(translateY(10px));  font-size:$startFont;}
-	44% {@include transform(translateY(-10px)); font-size:$startFont;}
-	52% {@include transform(translateY(10px));  font-size:$startFont;}
-	60% {@include transform(translateY(-10px)); font-size:$startFont;}
-	68% {@include transform(translateY(10px));  font-size:$startFont;}
-	76% {@include transform(translateY(-10px)); font-size:$startFont;}
-	84% {@include transform(translateY(10px));  font-size:$startFont;}
-	92% {@include transform(translateY(-10px)); font-size:$startFont;}
-	100%{@include transform(translateY(0px));   font-size:$endFont;}
+	28% {@include transform(translateY(-7px));font-size:$startFont;}
+	36% {@include transform(translateY(7px));font-size:$startFont; }
+	44% {@include transform(translateY(-7px));font-size:$startFont;}
+	52% {@include transform(translateY(7px)); font-size:$startFont;}
+	60% {@include transform(translateY(-7px));font-size:$startFont;}
+	68% {@include transform(translateY(7px)); font-size:$startFont;}
+	76% {@include transform(translateY(-7px));font-size:$startFont;}
+	84% {@include transform(translateY(7px)); font-size:$startFont;}
+	92% {@include transform(translateY(-7px));font-size:$endFont;}
+	100%{@include transform(translateY(0px));font-size:$endFont;}
 	/* Tada effect
-	10% {@include transform(rotate(-5deg) scale(0.9)); font-size:$startFont;}
-	25% {@include transform(rotate(-5deg) scale(0.9)); font-size:$startFont;}
-	32% {@include transform(rotate(5deg)  scale(1));   font-size:$startFont;}
-	39% {@include transform(rotate(-5deg) scale(1));   font-size:$startFont;}
-	46% {@include transform(rotate(5deg)  scale(1));   font-size:$startFont;}
-	53% {@include transform(rotate(-5deg) scale(1));   font-size:$startFont;}
-	60% {@include transform(rotate(5deg)  scale(1));   font-size:$startFont;}
-	67% {@include transform(rotate(-5deg) scale(1));   font-size:$startFont;}
-	74% {@include transform(rotate(5deg)  scale(1));   font-size:$startFont;}
-	81% {@include transform(rotate(-5deg) scale(1));   font-size:$startFont;}
-	88% {@include transform(rotate(0deg)  scale(1));   font-size:$startFont;}
-	100%{@include transform(rotate(0deg) scale(1));    font-size:$endFont;}*/
+	10% {@include transform(rotate(-5deg) scale(0.9));}
+	25% {@include transform(rotate(-5deg) scale(0.9));}
+	32% {@include transform(rotate(5deg)  scale(1));  }
+	39% {@include transform(rotate(-5deg) scale(1));  }
+	46% {@include transform(rotate(5deg)  scale(1));  }
+	53% {@include transform(rotate(-5deg) scale(1));  }
+	60% {@include transform(rotate(5deg)  scale(1));  }
+	67% {@include transform(rotate(-5deg) scale(1));  }
+	74% {@include transform(rotate(5deg)  scale(1));  }
+	81% {@include transform(rotate(-5deg) scale(1));  }
+	88% {@include transform(rotate(0deg)  scale(1));  }
+	100%{@include transform(rotate(0deg) scale(1)); }*/
 }
 @include keyframes(shake){
-	28% {@include transform(translateX(-10px)); font-size:$startFont;}
-	36% {@include transform(translateX(10px));  font-size:$startFont;}
-	44% {@include transform(translateX(-10px)); font-size:$startFont;}
-	52% {@include transform(translateX(10px));  font-size:$startFont;}
-	60% {@include transform(translateX(-10px)); font-size:$startFont;}
-	68% {@include transform(translateX(10px));  font-size:$startFont;}
-	76% {@include transform(translateX(-10px)); font-size:$startFont;}
-	82% {@include transform(translateX(10px));  font-size:$startFont;}
-	90% {@include transform(translateX(0px));   font-size:$startFont;}
-	100%{@include transform(translateX(0px));   font-size:$endFont; color:gray;}
+	28% {@include transform(translateX(-10px));}
+	36% {@include transform(translateX(10px)); }
+	44% {@include transform(translateX(-10px));}
+	52% {@include transform(translateX(10px)); }
+	60% {@include transform(translateX(-10px));}
+	68% {@include transform(translateX(10px)); }
+	76% {@include transform(translateX(-10px));}
+	82% {@include transform(translateX(10px)); }
+	90% {@include transform(translateX(0px));  }
+	100%{@include transform(translateX(0px)); color:#ccc;}
 }
